--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,15 @@
-html, body {
-    margin: 0;
-    padding: 0;
-  }
-  canvas {
-    display: block;
-  }
-  
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
+canvas {
+  margin-top: 20%;
+  display: block;
+}
